--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -188,7 +188,6 @@
 
 {% block javascripts %}
     <script>
-        var $listElementToRemove;
 
         $('#edit_objectives_course_info_tutoring').bootstrapToggle({
             on: 'Oui',
@@ -225,9 +224,9 @@
          * Remove a achievement from collection
          */
         achievementsCollectionHolder.on('click', '.achievement-collection-remove', function () {
-            $listElementToRemove = $(this).closest('li.achievement');
+            Syllabus.temporaryItem = $(this).closest('li.achievement');
             bootbox.confirm("Confirmez-vous la suppression de cet acquis d'apprentissage ?", function(result){
-                Syllabus.removeListElement($listElementToRemove);
+                Syllabus.removeListElement(Syllabus.temporaryItem);
             })
         });
 
@@ -258,9 +257,9 @@
          * Remove a prerequisite from collection
          */
         prerequisitesCollectionHolder.on('click', '.prerequisite-collection-remove', function () {
-            $listElementToRemove = $(this).closest('li.prerequisite');
+            Syllabus.temporaryItem = $(this).closest('li.prerequisite');
             bootbox.confirm("Confirmez-vous la suppression de ce prérequis ?", function(result){
-                Syllabus.removeListElement($listElementToRemove);
+                Syllabus.removeListElement(Syllabus.temporaryItem);
             })
         });
 
@@ -290,9 +289,9 @@
          * Remove a tutoringResource from collection
          */
         tutoringResourcesCollectionHolder.on('click', '.tutoringResource-collection-remove', function () {
-            $listElementToRemove = $(this).closest('li.tutoringResource');
+            Syllabus.temporaryItem = $(this).closest('li.tutoringResource');
             bootbox.confirm("Confirmez-vous la suppression de cette remédiation ?", function(result){
-                Syllabus.removeListElement($listElementToRemove);
+                Syllabus.removeListElement(Syllabus.temporaryItem);
             })
         });
 
