Icons moved to webroot (NotFoundHttpException fix).

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,8 +39,8 @@
 {% endblock %}
         </title>
 
-        <link rel="apple-touch-icon" href="{{ asset('images/apple-touch-icon.png') }}">
-        <link rel="icon" type="image/x-icon" href="{{ asset('images/favicon.ico') }}">
+        <link rel="apple-touch-icon" href="{{ asset('apple-touch-icon.png') }}">
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('app') }}
