Adding title to main header.

--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -26,8 +26,13 @@ body {
 
 header {
     min-height: 5rem;
+    padding-top: 1rem;
     margin-bottom: 1rem;
     background-color: theme-color('info');
+
+    h1 {
+        color: $white;
+    }
 }
 
 footer {
