--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -52,6 +52,13 @@
 
 {% if in_iframe == false %}
         <header>
+            <div class="{{ container_class }}">
+                <div class="row">
+                    <div class="col-12">
+                        <h1>Syllabus L@UCA</h1>
+                    </div>
+                </div>
+            </div>
         </header>
 {% endif %}
 
