Add link to a specific course on Moodle in objectives tab

--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -18,10 +18,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-2">
-
-                </div>
-                <div class="col-10">
+                <div class="col">
                     <p>
                         <strong>Comment rédiger un acquis d'apprentissage ?</strong>
                     </p>
@@ -49,7 +46,9 @@
                         </ul>
                     </p>
                     <p>
-                        Cours dédié à l'Approche Par Compétences (clé d'inscription = APC) :
+                        <a href="https://lms.unice.fr/enrol/index.php?id=891" target="_blank">
+                            Cours dédié à l'Approche Par Compétences (clé d'inscription = APC)
+                        </a>
                     </p>
                 </div>
             </div>
