Change label "en présentiel" instead "en classe" in activities tab

--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -59,7 +59,7 @@
                                                     <div class="row">
                                                         <div class="col">
                                                             <img src="{{ asset('images/activity_in_class_64.png') }}">
-                                                            <span class="font-weight-bold">Activité(s) réalisée(s) en classe</span>
+                                                            <span class="font-weight-bold">Activité(s) réalisée(s) en présentiel</span>
                                                         </div>
                                                     </div>
                                                     <div class="row">
