--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -174,6 +174,7 @@ form ul.list-group {
     & > h4 .fas {
         float: right;
         margin-left: .3rem;
+        cursor: pointer;
     }
 }
 
