--- a/app/Resources/views/form/evaluations_field.html.twig
+++ b/app/Resources/views/form/evaluations_field.html.twig
@@ -10,7 +10,7 @@
                     </small>
                 </div>
                 <div class="col-md-auto pl-0">
-                    <i class="fas fa-trash-alt danger evaluation-collection-remove" title="Retirer de la liste."></i>
+                    <i class="fas fa-trash-alt evaluation-collection-remove" title="Retirer de la liste."></i>
                 </div>
                 <div class="col-md-auto pl-0">
                     <i class="fas fa-arrows-alt evaluation-collection-move" title="Glisser / déposer pour modifier l'ordre."></i>
