--- a/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
@@ -1,32 +1,23 @@
 {% extends 'ajax.html.twig' %}
 
 {% block main %}
+
     {{ form_start(form) }}
 
-    <div class="row mt-3">
-        <div class="col">
-            <h6 class="my-3">
-                Espace pour laisser un message à vos étudiants (encouragements, derniers conseils&nbsp;) :
-            </h6>
-            {{ form_widget(form.closingRemarks) }}
-        </div>
-    </div>
-    <div class="row mt-3">
-        <div class="col">
-            <h6 class="my-3">
-                Intégrer une ressource vidéo (ou audio) respectant la règlementation sur les droits d'auteur.
-            </h6>
-            {{ form_widget(form.closingVideo) }}
-        </div>
-    </div>
-    <div class="row mt-3">
-        <div class="col">
-            <button class="btn btn-outline-primary btn-block submit" type="submit">
-                <i class="fas fa-save"></i>
-                Enregistrer
-            </button>
-        </div>
-    </div>
+    <h6 class="my-3">
+        Espace pour laisser un message à vos étudiants (encouragements, derniers conseils&hellip;)&nbsp;:
+    </h6>
+    {{ form_widget(form.closingRemarks) }}
+
+    <h6 class="my-3">
+        Intégrer une ressource vidéo (ou audio) respectant la règlementation sur les droits d'auteur&nbsp;:
+    </h6>
+    {{ form_widget(form.closingVideo) }}
+
+    <button class="btn btn-outline-primary btn-block submit" type="submit">
+        <i class="fas fa-save"></i>
+        Enregistrer
+    </button>
 
     {{ form_end(form) }}
 
