--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -10,6 +10,7 @@
                 ></i>
             </div>
             <div class="col">
+                {{ form_errors(section.title) }}
                 {{ form_widget(section.title) }}
                 <label placeholder="Titre"></label>
             </div>
