--- a/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
@@ -59,8 +59,9 @@
     <div class="row mb-2">
         <div class="col">
             <h5 class="mt-3">
-                Recommandations
+                Précisions (facultatif)
             </h5>
+            <small class="text-muted">ex: informations sur les examens, matériels interdits, pénalités de retard, d'abscences, d'orthographe, ...</small>
             {{form_widget(form.mccAdvice)}}
         </div>
     </div>
