--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -150,7 +150,7 @@
                             <div class="row">
                                 <div class="col">
                                     {{ form_widget(form.tutoringDescription) }}
-                                    <label placeholder="Dates, lieux, enseignants…"></label>
+                                    <label placeholder="Infos pratiques (facultatif)"></label>
                                 </div>
                             </div>
                         </div>
