--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -349,7 +349,7 @@
                                             {% endfor %}
                                         </div>
                                         <div class="d-flex flex-row align-items-center">
-                                            <span class="font-weight-bold mx-3"> En classe</span>
+                                            <span class="font-weight-bold mx-3"> En présentiel</span>
                                             <img src="{{ asset('images/activity_in_class_white_64.png') }}">
                                         </div>
                                     </div>
