--- a/app/Resources/views/course/edit_course_info_panel.html.twig
+++ b/app/Resources/views/course/edit_course_info_panel.html.twig
@@ -13,7 +13,7 @@
             </dt>
             <dd>
                 {% if courseInfo.modificationDate is not empty and courseInfo.lastUpdater is not empty %}
-                    {{ courseInfo.modificationDate|date }} par {{ courseInfo.lastUpdater }}
+                    {{ courseInfo.modificationDate|date }} par {{ courseInfo.lastUpdater.username }}
                 {% endif %}
             </dd>
         </dl>
@@ -87,6 +87,7 @@
 </div>
 <div class="row mt-3">
     <div class="col">
+    {% if courseInfo.publisher is empty or courseInfo.publicationDate is null %}
         <button class="btn btn-outline-primary btn-block shadow"
                 type="button"
                 id="publishButton"
@@ -94,6 +95,7 @@
             <i class="fas fa-eye"></i>
             Publier
         </button>
+    {% endif %}
         <a class="btn btn-outline-primary btn-block shadow"
            href="{{ path('view_student', {'id': courseInfo.id}) }}"
            title="La page s'ouvrira dans un nouvel onglet."
