--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -14,6 +14,8 @@
             {{ form_errors(form.domain) }}
             {{ form_widget(form.domain) }}
             <label placeholder="Domaine *"></label>
+            {{ form_widget(form.languages) }}
+            <label placeholder="En quelle(s) langue(s) est dispensé ce cours (facultatif)"></label>
         </div>
         <div class="col">
             <h6>
