--- a/app/Resources/views/email/publication.html.twig
+++ b/app/Resources/views/email/publication.html.twig
@@ -1,7 +1,7 @@
 <div>
     <p>
         Bonjour,<br><br>
-        le syllabus du cours « {{ courseTitle }} » vient d'être publié par {{ userName }}.
+        le syllabus du cours « {{ courseTitle }} » vient d'être publié par {{ user.username }}.
     </p>
     <p>
         La vue étudiante de ce syllabus est disponible à :<br>
