--- a/app/Resources/views/course/edit_course_info_panel.html.twig
+++ b/app/Resources/views/course/edit_course_info_panel.html.twig
@@ -88,20 +88,28 @@
 <div class="row mt-3">
     <div class="col">
     {% if courseInfo.publisher is empty or courseInfo.publicationDate is null %}
-        <button class="btn btn-outline-primary btn-block shadow"
-                type="button"
+        <button class="btn btn-outline-success btn-block shadow"
                 id="publishButton"
+                type="button"
                 {% if not courseInfoHelper.canBePublished(courseInfo) %} disabled {% endif %}>
             <i class="fas fa-eye"></i>
             Publier
         </button>
     {% endif %}
-        <a class="btn btn-outline-primary btn-block shadow"
-           href="{{ path('view_student', {'id': courseInfo.id}) }}"
-           title="La page s'ouvrira dans un nouvel onglet."
-           target="_blank">
-            <i class="fas fa-graduation-cap"></i>
-            Voir la version étudiante
-        </a>
+        <div class="btn-group btn-block shadow" role="group">
+            <button class="btn btn-outline-secondary"
+                    id="adviceButton"
+                    type="button">
+                <i class="fas fa-comment-dots"></i>
+                Demander un avis
+            </button>
+            <a class="btn btn-outline-secondary"
+               href="{{ path('view_student', {'id': courseInfo.id}) }}"
+               title="La page s'ouvrira dans un nouvel onglet."
+               target="_blank">
+                <i class="fas fa-graduation-cap"></i>
+                Voir la version étudiante
+            </a>
+        </div>
     </div>
 </div>
