--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -134,7 +134,9 @@
             activitiesCollectionHolder.on('click', '.activity-collection-remove', function(){
                 Syllabus.temporaryItem = $(this).closest('.activity');
                 bootbox.confirm("Confirmez-vous la suppression de cette activité ?", function(result){
-                    Syllabus.removeListElement(Syllabus.temporaryItem);
+                    if (result === true) {
+                        Syllabus.removeListElement(Syllabus.temporaryItem);
+                    }
                 })
             });
         }
@@ -224,7 +226,9 @@
         sectionsCollectionHolder.on('click', '.section-collection-remove', function() {
             Syllabus.temporaryItem = $(this).closest('li.section');
             bootbox.confirm("Confirmez-vous la suppression de cette section ?", function(result){
-                Syllabus.removeListElement(Syllabus.temporaryItem);
+                if (result === true) {
+                    Syllabus.removeListElement(Syllabus.temporaryItem);
+                }
             })
         });
 
@@ -281,7 +285,9 @@
         evaluationsCollectionHolder.on('click', '.evaluation-collection-remove', function(){
             Syllabus.temporaryItem = $(this).closest('div.evaluation');
             bootbox.confirm("Confirmez-vous la suppression de cette évaluation ?", function(result){
-                Syllabus.removeListElement(Syllabus.temporaryItem);
+                if (result === true) {
+                    Syllabus.removeListElement(Syllabus.temporaryItem);
+                }
             })
         });
 
