Add label in drag&drop activities container

--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -176,6 +176,7 @@
                                 <div class="col m-2 border">
                                     <div class="row h-100">
                                         <div class="col p-1">
+                                            <div class="text-muted font-italic text-center p-2">Glisser / déposer ici vos activités et évaluations</div>
                                             {{ form_widget(section.activities) }}
                                         </div>
                                     </div>
