Add white icon for evaluations

--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -254,6 +254,10 @@ div.equipment {
     &.evaluation-cc div.icon {
         background: url("../images/evaluation_cc_white_32.png") no-repeat;
     }
+
+    &.evaluation-ct div.icon {
+        background: url("../images/evaluation_cc_white_32.png") no-repeat;
+    }
 }
 
 .list-activities,
