--- a/app/Resources/views/form/evaluations_field.html.twig
+++ b/app/Resources/views/form/evaluations_field.html.twig
@@ -2,6 +2,7 @@
     <div class="evaluation card mb-2 border rounded shadow evaluation-ct">
         <div class="card-header p-1">
             <div class="row">
+                <div class="icon ml-3"></div>
                 <div class="col align-self-center">
                     <small class="font-weight-bold evaluation-label">
                         {% if evaluation.vars.data %}
