--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -176,7 +176,9 @@
                                 <div class="col m-2 border">
                                     <div class="row h-100">
                                         <div class="col p-1">
-                                            <div class="text-muted font-italic text-center p-2">Glisser / déposer ici vos activités et évaluations</div>
+                                            <div class="text-muted font-italic text-center p-2">
+                                                Glisser / déposer ici vos activités et évaluations (Contrôle continu)
+                                            </div>
                                             {{ form_widget(section.activities) }}
                                         </div>
                                     </div>
