--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -13,7 +13,7 @@
     <div class="row mt-3">
         <div class="col">
             <h6 class="my-3">
-                Matériel obligatoire
+                Matériel nécessaire
             </h6>
             <div class="row">
                 <div class="col border ml-3 mr-3 p-1">
