--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -20,6 +20,9 @@
                     {{form_widget(form.listEquipments)}}
                 </div>
                 <div class="col border ml-3 mr-3 p-1">
+                    <div class="text-muted font-italic text-center p-2">
+                        Glisser / déposer ici le matériel nécessaire
+                    </div>
                     {{form_widget(form.equipments)}}
                 </div>
             </div>
