--- a/app/Resources/views/course/edit_infos_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_infos_course_info_tab.html.twig
@@ -9,7 +9,7 @@
                 Indiquer toutes les informations dont vous disposez sur le calendrier du cours, des examens...
             </h6>
             <h6>
-                Vous pouvez aussi partager un emploi du temps (image Excel, lien web...)
+                Vous pouvez aussi partager un emploi du temps (lien web, ...)
             </h6>
             {{form_widget(form.agenda)}}
         </div>
