--- a/app/Resources/views/course/edit_infos_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_infos_course_info_tab.html.twig
@@ -9,7 +9,7 @@
                 Indiquer toutes les informations dont vous disposez sur le calendrier du cours, des examens...
             </h6>
             <h6>
-                Vous pouvez aussi partager un emploi du temps (lien web, ...)
+                Vous pouvez aussi partager un emploi du temps (ex: lien web, ...) (facultatif)
             </h6>
             {{form_widget(form.agenda)}}
         </div>
@@ -17,7 +17,7 @@
     <div class="row mt-3">
         <div class="col">
             <h6 class="mt-3">
-                Comment allez-vous organiser votre cours ?
+                Comment allez-vous organiser votre cours ? (facultatif)
             </h6>
             {{form_widget(form.organization)}}
         </div>
