--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -284,6 +284,18 @@ div.equipment {
     }
 }
 
+div.view-activity.view-class {
+    background-color: $black;
+}
+
+div.view-activity.view-autonomy {
+    background-color: $dark;
+}
+
+div.view-evaluation {
+    background-color: $info;
+}
+
 
 
 /*
